--- a/nginx.conf
+++ b/nginx.conf
@@ -4,25 +4,9 @@ server {
         server_name          localhost.portfolioonline.com.au;
         ssl_certificate      cert.pem;
         ssl_certificate_key  certkey.key;
- 
+
         # For the cosmos-react welcome page:
         location / {
-            proxy_pass http://host.docker.internal:8080;
-        }
- 
-        # For the Ops CA dashboard app:
-        location /corporate-actions {
-            proxy_pass https://host.docker.internal:8443/corporate-actions;
-        }
- 
-        # For the Adviser CA dashboard app:
-        location /adviser/corporate-actions {
-            proxy_pass https://host.docker.internal:8443/adviser/corporate-actions;
-        }
- 
- 
-        # For the only external endpoint we contact from the UI currently:
-        location /investments {
-            proxy_pass https://api-dev8.ioofonline.com.au/investments;
+            proxy_pass https://host.docker.internal:9000;
         }
 	}
