--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
   reverse_proxy_git:
     image: docker-registry.hq.local/dev/asis-web/reverse_proxy
     volumes:
-      - ./nginx_local_git.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx_local_git.conf:/etc/nginx/conf.d/default.conf
+      - /Users/arun/projects/WEBART:/www/data
     ports:
       - "443:443"
       - "80:80"
+      - "7999:7999"
