--- a/nginx_local_git.conf
+++ b/nginx_local_git.conf
@@ -1,52 +1,18 @@
-user  nginx;
-worker_processes  1;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
-events {
-  worker_connections  1024;
-}
-
-http {
-  include       /etc/nginx/mime.types;
-  include    /etc/nginx/proxy.conf;
-  default_type  application/octet-stream;
-
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-  access_log  /var/log/nginx/access.log  main;
-  error_log /var/log/nginx/error.log;
-
-  sendfile        on;
-  #tcp_nopush     on;
-
-  #gzip  on;
-
-  server{
+server{
     listen               443 ssl;
     listen               80;
-    server_name          git.hq.local
+    server_name          localhost.portfolioonline.com.au;
     ssl_certificate      cert.pem;
     ssl_certificate_key  certkey.key;
 
-    location /projects/WEBART{
-      root   /www/data;
+    location /projects {
+      root /www/data;
+      try_files $uri =404;
     }
-  }
 
-  server {
-     listen               443 ssl;
-     listen               80;
-     server_name          localhost.portfolioonline.com.au;
-     ssl_certificate      cert.pem;
-     ssl_certificate_key  certkey.key;
-
-     # For the cosmos-react welcome page:
-     location / {
+    # For the cosmos-react welcome page:
+    location / {
          proxy_pass https://host.docker.internal:9000;
-     }
- 	}
+    }
+
 }
